--- a/css/talix.css
+++ b/css/talix.css
@@ -800,15 +800,14 @@ a {
   Buttons
 ========================================================================== */
 .btn {
-  background: #333;
+  background: #003D4C;
   color: #fff;
   border: none;
   padding: 8px 18px 6px;
   min-width: 100px;
-  font-size: 12px;
+  font-size: .8rem;
   display: inline-block;
   margin: 0;
-  text-transform: uppercase;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
@@ -819,14 +818,12 @@ a {
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
-  font-family: "Source Sans Pro", sans-serif;
-  font-style: normal;
-  font-weight: 400;
+  width: 130px;
   border-radius: 2px;
-  transition: all 0.15s ease-in-out; }
+  transition: all 0.23s ease-in-out 0s; }
   .btn:hover,
   .btn:focus {
-    background: #777;
+    background: #007a99;
     color: #fff;
     border: none; }
   .btn:focus,
