--- a/css/styles.css
+++ b/css/styles.css
@@ -47,15 +47,13 @@ body {
   -webkit-perspective: 1000;
   perspective: 1000;
   display: inline-block;
-  text-align: left; }
+  text-align: left;
+  margin: 2rem; }
 
 .hex-code {
   cursor: pointer; }
   .hex-code:hover {
-    background: #00ABC9; }
-
-.colors {
-  text-align: center; }
+    background: #00abc9; }
 
 .swatch-container,
 .front,
@@ -149,7 +147,8 @@ footer.details {
   text-align: center;
   font-size: 1.1rem; }
 
-footer.details, span {
+footer.details,
+span {
   font-weight: normal;
   display: block; }
 
@@ -249,8 +248,7 @@ button:focus {
 
 *******************************************************/
 .ui-things {
-  background: #ffffff;
-  margin: 0 auto; }
+  background: #ffffff; }
   .ui-things::after {
     content: '';
     display: block;
@@ -298,12 +296,123 @@ button:focus {
   margin: 4px;
   background-color: #54575a; }
 
-.glyphs {
-  padding-top: 3rem; }
-  .glyphs .row {
-    background: #ffffff;
-    margin: 0 auto; }
-    .glyphs .row::after {
-      content: '';
+/*****************************************************
+
+Glyphs
+*******************************************************/
+.iconography-wrapper {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background: #ffffff;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); }
+  @media (max-width: 767px) {
+    .iconography-wrapper {
+      width: 80%; } }
+
+.another-wrapper {
+  width: 90%;
+  text-align: center; }
+
+/*****************************************************
+
+Sidebar
+*******************************************************/
+.sidebar-wrap {
+  width: 16.66667%;
+  position: relative;
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
+  float: left; }
+  @media (min-width: 768px) and (max-width: 979px) {
+    .sidebar-wrap {
+      padding-left: 0;
+      padding-right: 0;
+      width: 100%; } }
+  .sidebar-wrap .brandLogo {
+    border: none !important;
+    display: inline-block;
+    width: 100%; }
+  .sidebar-wrap .sidebar {
+    position: fixed;
+    z-index: 400;
+    height: 100%;
+    left: 0;
+    border-left: 4px solid #cddfdf;
+    background-color: #eceef3; }
+    @media (min-width: 768px) and (max-width: 979px) {
+      .sidebar-wrap .sidebar {
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+        border: none; } }
+    .sidebar-wrap .sidebar h1 {
       display: block;
-      clear: both; }
+      background: #62a70f;
+      padding: 0;
+      margin: 0 0 0 -4px;
+      text-align: center;
+      background-size: auto 100%;
+      background-position: 0 50%; }
+      @media (min-width: 768px) and (max-width: 979px) {
+        .sidebar-wrap .sidebar h1 {
+          background-size: cover; } }
+      .sidebar-wrap .sidebar h1 a {
+        border: none !important;
+        display: inline-block;
+        width: 100%; }
+      .sidebar-wrap .sidebar h1 img {
+        margin: 0.75em auto;
+        max-height: 55px;
+        width: auto;
+        display: inline-block;
+        vertical-align: middle; }
+    .sidebar-wrap .sidebar nav {
+      display: block; }
+      .sidebar-wrap .sidebar nav ul.side-nav {
+        list-style: none;
+        margin-left: -4px;
+        padding: 0; }
+        .sidebar-wrap .sidebar nav ul.side-nav li {
+          padding-top: 25%;
+          font-size: 1rem;
+          margin-left: 15%;
+          border-left: 4px solid transparent;
+          cursor: pointer; }
+          @media (min-width: 768px) and (max-width: 979px) {
+            .sidebar-wrap .sidebar nav ul.side-nav li {
+              padding-top: 0; } }
+          .sidebar-wrap .sidebar nav ul.side-nav li:hover {
+            background: #dce0e9; }
+          .sidebar-wrap .sidebar nav ul.side-nav li a {
+            color: #003D4C; }
+            @media (min-width: 768px) and (max-width: 979px) {
+              .sidebar-wrap .sidebar nav ul.side-nav li a {
+                line-height: 3;
+                text-align: center;
+                border: none;
+                padding: .5rem 0; } }
+  @media (min-width: 768px) and (max-width: 979px) {
+    .sidebar-wrap {
+      width: 100%; } }
+  .sidebar-wrap img {
+    text-align: center;
+    margin: 0 auto;
+    width: 70%;
+    height: auto; }
+    @media (min-width: 768px) and (max-width: 979px) {
+      .sidebar-wrap img {
+        display: none; } }
+
+.first-container {
+  padding-top: 5%; }
+  .first-container h1 {
+    font-weight: 400;
+    color: #003D4C; }
+
+.main-section {
+  width: 83.3333%;
+  float: right;
+  margin: 0 auto; }
+
+.primary-container {
+  float: none; }
