--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,14 @@ body {
     background: #62a70f;
     color: white; }
 
+.red {
+  background: #CE0058; }
+  .red .hover-notification {
+    background: #CE0058; }
+  .red .success {
+    background: #CE0058;
+    color: white; }
+
 .grey {
   background: #54575a; }
   .grey .hover-notification {
@@ -156,6 +164,15 @@ span {
   font-weight: bold;
   text-align: center;
   font-size: 1.4rem; }
+  @media (min-width: 980px) and (max-width: 1199px) {
+    .click-notification {
+      width: 86.33333%; } }
+  @media (min-width: 768px) and (max-width: 979px) {
+    .click-notification {
+      width: 83.3333%; } }
+  @media (max-width: 767px) {
+    .click-notification {
+      width: 85.33333%; } }
 
 .hover-notification {
   transition: all 0.5s ease;
@@ -170,9 +187,6 @@ span {
   display: none;
   transition: all 0.9s ease; }
 
-button:focus {
-  outline: 0; }
-
 .front:hover > .button-wrap {
   color: white;
   text-align: center;
@@ -182,7 +196,8 @@ button:focus {
 .sg-section-header {
   font-weight: 400;
   width: 100%;
-  margin-bottom: 3rem; }
+  margin-bottom: 3rem;
+  margin-left: 1.2rem; }
 
 .underline {
   text-decoration: underline; }
@@ -191,6 +206,10 @@ button:focus {
   display: block;
   position: absolute;
   top: 0; }
+
+.colors {
+  width: 70%;
+  margin: 0 auto; }
 
 /*****************************************************
 
@@ -247,12 +266,19 @@ button:focus {
   UI Elements Section Styles
 
 *******************************************************/
+.button-examples .btn {
+  margin-top: 2rem; }
+
 .ui-things {
-  background: #ffffff; }
+  width: 70%;
+  margin: 0 auto; }
   .ui-things::after {
     content: '';
     display: block;
     clear: both; }
+  @media (max-width: 767px) {
+    .ui-things {
+      width: 80%; } }
 
 .ui-elements {
   padding-top: 3rem; }
@@ -296,6 +322,15 @@ button:focus {
   margin: 4px;
   background-color: #54575a; }
 
+@media (max-width: 767px) {
+  .button-examples .btn {
+    margin-top: 1rem;
+    text-align: center; } }
+
+.button-examples .btn .btn-small {
+  margin: 0 auto;
+  text-align: center; }
+
 /*****************************************************
 
 Glyphs
@@ -303,7 +338,8 @@ Glyphs
 .iconography-wrapper {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background: #ffffff;
+  width: 70%;
+  margin: 0 auto;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05); }
   @media (max-width: 767px) {
     .iconography-wrapper {
@@ -312,6 +348,9 @@ Glyphs
 .another-wrapper {
   width: 90%;
   text-align: center; }
+  @media (max-width: 767px) {
+    .another-wrapper .glyphicon {
+      margin: .4rem; } }
 
 /*****************************************************
 
@@ -328,10 +367,11 @@ Sidebar
       padding-left: 0;
       padding-right: 0;
       width: 100%; } }
-  .sidebar-wrap .brandLogo {
-    border: none !important;
-    display: inline-block;
-    width: 100%; }
+  @media (max-width: 767px) {
+    .sidebar-wrap {
+      padding-left: 0;
+      padding-right: 0;
+      width: 100%; } }
   .sidebar-wrap .sidebar {
     position: fixed;
     z-index: 400;
@@ -340,6 +380,12 @@ Sidebar
     border-left: 4px solid #cddfdf;
     background-color: #eceef3; }
     @media (min-width: 768px) and (max-width: 979px) {
+      .sidebar-wrap .sidebar {
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+        border: none; } }
+    @media (max-width: 767px) {
       .sidebar-wrap .sidebar {
         position: relative;
         width: 100%;
@@ -356,10 +402,13 @@ Sidebar
       @media (min-width: 768px) and (max-width: 979px) {
         .sidebar-wrap .sidebar h1 {
           background-size: cover; } }
+      @media (max-width: 767px) {
+        .sidebar-wrap .sidebar h1 {
+          background-size: cover; } }
       .sidebar-wrap .sidebar h1 a {
         border: none !important;
         display: inline-block;
-        width: 100%; }
+        width: 90%; }
       .sidebar-wrap .sidebar h1 img {
         margin: 0.75em auto;
         max-height: 55px;
@@ -372,6 +421,30 @@ Sidebar
         list-style: none;
         margin-left: -4px;
         padding: 0; }
+        @media (max-width: 767px) {
+          .sidebar-wrap .sidebar nav ul.side-nav {
+            display: -webkit-inline-box;
+            display: inline-box;
+            display: -moz-inline-box;
+            display: -o-inline-box;
+            width: 28%; } }
+        @media (min-width: 768px) and (max-width: 979px) {
+          .sidebar-wrap .sidebar nav ul.side-nav {
+            display: -webkit-inline-box;
+            display: inline-box;
+            display: -moz-inline-box;
+            display: -o-inline-box;
+            width: 28%; } }
+        @media (max-width: 468px) {
+          .sidebar-wrap .sidebar nav ul.side-nav {
+            display: -webkit-inline-box;
+            display: inline-box;
+            display: -moz-inline-box;
+            display: -o-inline-box;
+            width: 18%; } }
+        @media (max-width: 979px) and (min-width: 768px) {
+          .sidebar-wrap .sidebar nav ul.side-nav {
+            width: 100%; } }
         .sidebar-wrap .sidebar nav ul.side-nav li {
           padding-top: 25%;
           font-size: 1rem;
@@ -381,11 +454,22 @@ Sidebar
           @media (min-width: 768px) and (max-width: 979px) {
             .sidebar-wrap .sidebar nav ul.side-nav li {
               padding-top: 0; } }
+          @media (max-width: 767px) {
+            .sidebar-wrap .sidebar nav ul.side-nav li {
+              padding-top: 0;
+              margin-left: 45%;
+              font-size: 1.2rem; } }
           .sidebar-wrap .sidebar nav ul.side-nav li:hover {
             background: #dce0e9; }
           .sidebar-wrap .sidebar nav ul.side-nav li a {
             color: #003D4C; }
             @media (min-width: 768px) and (max-width: 979px) {
+              .sidebar-wrap .sidebar nav ul.side-nav li a {
+                line-height: 3;
+                text-align: center;
+                border: none;
+                padding: .5rem 0; } }
+            @media (max-width: 767px) {
               .sidebar-wrap .sidebar nav ul.side-nav li a {
                 line-height: 3;
                 text-align: center;
@@ -410,9 +494,15 @@ Sidebar
     color: #003D4C; }
 
 .main-section {
-  width: 83.3333%;
+  width: 88.33333%;
   float: right;
   margin: 0 auto; }
+  @media (min-width: 980px) and (max-width: 1199px) {
+    .main-section {
+      width: 85.33333%; } }
 
-.primary-container {
+.primary-content {
   float: none; }
+
+.margin-fix {
+  margin-left: 0; }
